--- a/estoque.html
+++ b/estoque.html
@@ -26,7 +26,7 @@
         <button id="mv">Móveis</button>
         <button id="apr">Aparelhos</button>
         <button id="ele">Eletrodomésticos</button>
-        <button id="ex">Exóticos</button>
+        <button id="ex">Inovadores</button>
     </div>
     <div class="prod">
         <div class="moveis">
