--- a/estoque.html
+++ b/estoque.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estoque.css">
-    <title>Estoque</title>
+    <title>NextHome - Produtos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="Icon" href="logo2.png">
 </head>
 <body>
     <header>
+        <div class="lg"></div>
         <button id="vol">
             <img src="https://cdn-icons-png.flaticon.com/512/7699/7699123.png" alt="">
         </button>
@@ -19,7 +21,7 @@
             <input type="text" id="sch" placeholder="Procurar.." name="search">
             <button type="submit"><img src="https://cdn-icons-png.flaticon.com/512/342/342359.png" alt=""></button>
             <ul id="myUL">
-                <li><a href="#">Cadeira Ergonomica Ultra-tecnológica - X-Chair</a></li>
+                <li><a href="#"><img id="pr1" src="" alt="">Cadeira Ergonomica Ultra-tecnológica - X-Chair</a></li>
               </ul>
           </form>
           </div>
@@ -32,7 +34,6 @@
         <button id="mv">Móveis</button>
         <button id="apr">Aparelhos</button>
         <button id="ele">Eletrodomésticos</button>
-        <button id="ex">Inovadores</button>
         <button id="dv">Diversos</button>
         <button id="nov">Novidades</button>
     </div>
