--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" translate="no">
 <head>
+    <meta name="google" content="notranslate">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -21,19 +22,25 @@
             <input type="text" id="sch" placeholder="Procurar.." name="search">
             <button type="submit"><img src="https://cdn-icons-png.flaticon.com/512/342/342359.png" alt=""></button>
             <ul id="myUL">
-                <li><a href="#"><img id="pr1" src="" alt="">Cadeira Ergonomica Ultra-tecnológica - X-Chair</a></li>
+                <li><a href="#"><img id="pr1" src="xchair.png" alt=""><i id="nms">Cadeira Ergonomica Ultra-tecnológica - X-Chair</i></a></li>
               </ul>
           </form>
           </div>
           <div class="cad">
+            <div class="user"><img src="https://cdn-icons-png.flaticon.com/512/7915/7915522.png" alt=""></div>
+            <div class="droplg">
+                <h1 id="nusu"></h1>
+                <div id="desl"><img src="https://cdn-icons-png.flaticon.com/512/3541/3541892.png" alt=""><h1>Sair</h1></div>
+            </div>
             <a href="login.html"><button id="ct">Cadastrar</button></a>
             <a href=""><button id="lg">Login</button></a>
-            <button id="lin"><img src="https://cdn-icons-png.flaticon.com/512/630/630591.png" alt=""></button>
+            <button id="lin"><img id="flag" src="https://cdn-icons-png.flaticon.com/512/630/630591.png" alt=""></button>
             <div class="drop">
-                <div><img src="https://cdn-icons-png.flaticon.com/512/330/330425.png" alt=""><h1>English</h1></div>
-                <div><img src="https://cdn-icons-png.flaticon.com/512/330/330557.png" alt=""><h1>Español</h1></div>
-                <div><img src="https://cdn-icons-png.flaticon.com/512/630/630591.png" alt=""><h1>Português</h1></div>
-                <div><img src="https://cdn-icons-png.flaticon.com/512/321/321230.png" alt=""><h1>Francais</h1></div>
+                <div id="en"><img src="https://cdn-icons-png.flaticon.com/512/330/330425.png" alt=""><h1>English</h1></div>
+                <div id="es"><img src="https://cdn-icons-png.flaticon.com/512/330/330557.png" alt=""><h1>Español</h1></div>
+                <div id="pt"><img src="https://cdn-icons-png.flaticon.com/512/630/630591.png" alt=""><h1>Português</h1></div>
+                <div id="fr"><img src="https://cdn-icons-png.flaticon.com/512/321/321230.png" alt=""><h1>Francais</h1></div>
+                <div id="ru"><img src="https://cdn-icons-png.flaticon.com/512/330/330437.png" alt=""><h1>Русский</h1></div>
             </div>
           </div>
           <div class="ld">
@@ -57,9 +64,9 @@
                 <button id="volt"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
                 <button id="prox"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
             </div>
-            <h1 class="pr"><em class="ap">A partir de</em>R$250.000</h1>
+            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">250.000</i></h1>
             <div class="prodtxt">
-            <h1>Cadeira Ergonomica Ultra-tecnológica - X-Chair</h1>
+            <h1 class="nm">Cadeira Ergonomica Ultra-tecnológica - X-Chair</h1>
         </div>
         </div>
     </div>
@@ -76,12 +83,12 @@
             </div>
         </div>
         <div class="descp">
-            <h1><i>Sobre o Produto</i><img src="https://cdn-icons-png.flaticon.com/512/5397/5397791.png" alt=""></h1>
-            <p>X-Chair é uma cadeira muito confortável, parecida com uma cadeira de carro, mas que tem rodinhas para ir e voltar, além de que ela pode se reposicionar para cima e para baixo, possuindo os botoẽs para aumentar e diminuir a intensidade da vibração, contendo o analógico para a cadeira se mexer e dois porta copos.</p>
-            <h1><i>Informações Técnicas</i><img src="https://cdn-icons-png.flaticon.com/512/5397/5397791.png" alt=""></h1>
-            <p>Materiais e tecnologias: 	Plástico, Bateria, IA, Sensores, Couro, Lã, Ferro, Borracha, Fio de Cobre, Caixinha de som e hidráulica.</p>
-            <p>IA tem sensores para auxiliar a pessoa a não bater com velocidade máxima de 5 km/h.</p>
-            <p>Pode-se ativar e desativar a vibração, posicionar a cadeira do jeito que o usuário quiser e tem setinhas para rotacioná-la.</p>
+            <h1><i class="sp">Sobre o Produto</i><img src="https://cdn-icons-png.flaticon.com/512/5397/5397791.png" alt=""></h1>
+            <p class="p1">X-Chair é uma cadeira muito confortável, parecida com uma cadeira de carro, mas que tem rodinhas para ir e voltar, além de que ela pode se reposicionar para cima e para baixo, possuindo os botoẽs para aumentar e diminuir a intensidade da vibração, contendo o analógico para a cadeira se mexer e dois porta copos.</p>
+            <h1><i class="it">Informações Técnicas</i><img src="https://cdn-icons-png.flaticon.com/512/5397/5397791.png" alt=""></h1>
+            <p class="p2">Materiais e tecnologias: 	Plástico, Bateria, IA, Sensores, Couro, Lã, Ferro, Borracha, Fio de Cobre, Caixinha de som e hidráulica.</p>
+            <p class="p3">IA tem sensores para auxiliar a pessoa a não bater com velocidade máxima de 5 km/h.</p>
+            <p class="p4">Pode-se ativar e desativar a vibração, posicionar a cadeira do jeito que o usuário quiser e tem setinhas para rotacioná-la.</p>
     </div>
     </div>
     <div class="com">
@@ -94,8 +101,10 @@
         <h1 class="prc"></h1>
         <h1 class="par">12x de <em id="prej"></em> sem juros</h1>
         <button id="cpr">Comprar</button>
+        <div class="inf">
+            <h1 id="fre"><img src="https://cdn-icons-png.flaticon.com/512/2203/2203124.png" alt="">Frete grátis</h1>
         <h1 id="est"><em id="quant">14</em>x em estoque</h1>
-        <h1 id="fre"><img src="https://cdn-icons-png.flaticon.com/512/2203/2203124.png" alt="">Frete grátis</h1>
+    </div>
         <div class="av">
             <div class="avtxt">
                 <h1>Avaliações</h1>
@@ -133,6 +142,8 @@
     </div>
         </div>
     </div>
+    <script src="var.js"></script>
+    <script src="lang.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
