--- a/login.html
+++ b/login.html
@@ -14,15 +14,15 @@
 <main>
     <div class="fundo">
     </div>
-   <form>
+   <form action="index.html">
     <div class="Criar">
         <h1 class="CRIAR_conta">Criar Conta</h1>
           <br><br>
-      <input type="text" placeholder="Seu nome">
+      <input id="inn" type="text" placeholder="Seu nome">
           <br><br>
-      <input type="text" placeholder="Coloque seu E-mail">
+      <input id="ine" type="text" placeholder="Coloque seu E-mail">
           <br><br>       
-      <input type="password" placeholder="Crie sua Senha" id="Crie">
+      <input id="ins" type="password" placeholder="Crie sua Senha">
       <i class="bi bi-eye" id="Btn-Senha" onclick="mostrarSenha()"></i>
           <br><br>
     <div class="box">
@@ -30,17 +30,14 @@
         <a href="Termos.html"> termos de serviço</a></p>
         <br><br>
     </div>
-        <button class="Btn1">Continuar</button>
+        <button class="btn1">Continuar</button>
           <br><br>
         <a href="Entrar.html"><button class="buttonvoltar">Voltar</button></a>
           <br><br>
-        <p>Já tenho uma consta? <a href="Entrar.html">Entrar</a></p>
+        <p>Já tenho uma conta? <a href="Entrar.html">Entrar</a></p>
     </div>
    </form>
-    <script src="js/olho.js"></script>
 </main>
+<script src="login.js"></script>
 </body>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap');
-    </style>
 </html>
