--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           </form>
           </div>
           <div class="cad">
+            <div class="nmu">
+                <h1 id="usu"></h1>
             <div class="user"><img src="https://cdn-icons-png.flaticon.com/512/7915/7915522.png" alt=""></div>
+        </div>
             <div class="droplg">
                 <h1 id="nusu"></h1>
                 <div id="desl"><img src="https://cdn-icons-png.flaticon.com/512/3541/3541892.png" alt=""><h1>Sair</h1></div>
