--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 <h1>NextHome Technologies©</h1>
             </div>
         </div>
+        <div class="off">
+            <h1 id="offtxt"><em>!!!NOVO!!!</em> --- Cadeira Ergonomica Ultra-tecnológica - X-Chair, apenas por R$250.000!!!</h1>
+        </div>
     </header>
     <div class="prod">
         <div class="moveis">
