--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" translate="no">
+<html lang="pt" translate="no">
 <head>
     <meta name="google" content="notranslate">
     <meta charset="UTF-8">
@@ -73,6 +73,20 @@
             <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">250.000</i></h1>
             <div class="prodtxt">
             <h1 class="nm">Cadeira Ergonomica Ultra-tecnológica - X-Chair</h1>
+        </div>
+        </div>
+    </div>
+    <div class="aparelhos">
+        <div class="prod1a">
+            <div class="pro"><h1>50% Off</h1></div>
+            <img id="pimg" src="xchair.png" alt="">
+            <div class="btnspv">
+                <button id="volt"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
+                <button id="prox"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
+            </div>
+            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">75.000</i></h1>
+            <div class="prodtxt">
+            <h1 class="nm">Robô Aspirador de Pó Smart - Ultra-Clean</h1>
         </div>
         </div>
     </div>
