--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <button id="volt"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
                 <button id="prox"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
             </div>
-            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">75.000</i></h1>
+            <h1 class="dsh">R$<i class="ds">47.000</i></h1>
+            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">23.500</i></h1>
             <div class="prodtxt">
             <h1 class="nm">Robô Aspirador de Pó Smart - Ultra-Clean</h1>
         </div>
