--- a/index.html
+++ b/index.html
@@ -63,33 +63,10 @@
     </header>
     <div class="prod">
         <div class="moveis">
-        <div class="prod1">
-            <div class="new"><h1>Novo</h1></div>
-            <img id="pimg" src="xchair.png" alt="">
-            <div class="btnspv">
-                <button id="volt"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
-                <button id="prox"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
-            </div>
-            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">250.000</i></h1>
-            <div class="prodtxt">
-            <h1 class="nm">Cadeira Ergonomica Ultra-tecnológica - X-Chair</h1>
+
         </div>
-        </div>
-    </div>
     <div class="aparelhos">
-        <div class="prod1a">
-            <div class="pro"><h1>50% Off</h1></div>
-            <img id="pimg" src="xchair.png" alt="">
-            <div class="btnspv">
-                <button id="volt"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
-                <button id="prox"><img src="https://cdn-icons-png.flaticon.com/512/8591/8591712.png" alt=""></button>
-            </div>
-            <h1 class="dsh">R$<i class="ds">47.000</i></h1>
-            <h1 class="pr"><em class="ap">A partir de</em>R$<i id="vl">23.500</i></h1>
-            <div class="prodtxt">
-            <h1 class="nm">Robô Aspirador de Pó Smart - Ultra-Clean</h1>
-        </div>
-        </div>
+
     </div>
     <div class="desc">
         <div class="pimgs">
@@ -119,6 +96,7 @@
         <div class="txtpct">
         <h1 class="txtp"></h1>
     </div>
+    <h1 class="descdsh"></h1>
         <h1 class="prc"></h1>
         <h1 class="par">12x de <em id="prej"></em> sem juros</h1>
         <button id="cpr">Comprar</button>
@@ -133,6 +111,7 @@
         <div class="nt">
             <h1 id="nota"><em id="prn"></em> /10</h1>
         </div>
+        <div class="apl">
         <div class="est">
             <div class="e1"></div>
             <div class="e2"></div>
@@ -140,8 +119,11 @@
             <div class="e4"></div>
             <div class="e5"></div>
         </div>
-        <h1 class="vd">5 Vendas</h1>
+        <div class="vvv">
+        <h1 class="vd"></h1>
         <h1 class="avv"></h1>
+    </div>
+</div>
         </div>
         <div class="comentarios">
             <div class="cttxt">
@@ -163,6 +145,8 @@
     </div>
         </div>
     </div>
+</div>
+    <script src="nvs.js"></script>
     <script src="var.js"></script>
     <script src="lang.js"></script>
     <script src="script.js"></script>
