--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <h1 id="nusu"></h1>
                 <div id="desl"><img src="https://cdn-icons-png.flaticon.com/512/3541/3541892.png" alt=""><h1>Sair</h1></div>
             </div>
-            <a href="login.html"><button id="ct">Cadastrar</button></a>
-            <a href=""><button id="lg">Login</button></a>
+            <a href="cadastro.html"><button id="ct">Cadastrar</button></a>
+            <a href="entrar.html"><button id="lg">Login</button></a>
             <button id="lin"><img id="flag" src="https://cdn-icons-png.flaticon.com/512/630/630591.png" alt=""></button>
             <div class="drop">
                 <div id="en"><img src="https://cdn-icons-png.flaticon.com/512/330/330425.png" alt=""><h1>English</h1></div>
@@ -49,7 +49,7 @@
           <div class="ld">
             <h1>Categorias</h1>
             <button id="mv">Móveis <img id="exc" src="https://cdn-icons-png.flaticon.com/512/3588/3588294.png" alt=""></button>
-            <button id="apr">Aparelhos</button>
+            <button id="apr">Aparelhos <img id="exc2" src="https://cdn-icons-png.flaticon.com/512/3588/3588294.png" alt=""></button>
             <button id="ele">Eletrodomésticos</button>
             <button id="dv">Diversos</button>
             <button id="nov">Novidades</button>
