--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="off">
-            <h1 id="offtxt"><em>!!!NOVO!!!</em> --- Cadeira Ergonomica Ultra-tecnológica - X-Chair, apenas por R$250.000!!!</h1>
+            <h1 id="offtxt"></h1>
         </div>
     </header>
     <div class="prod">
