--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <input type="text" id="sch" placeholder="Procurar.." name="search">
             <button type="submit"><img src="https://cdn-icons-png.flaticon.com/512/342/342359.png" alt=""></button>
             <ul id="myUL">
-                <li><a href="#"><img id="pr1" src="xchair.png" alt=""><i id="nms">Cadeira Ergonomica Ultra-tecnológica - X-Chair</i></a></li>
+                <li><a href="#"><img id="pr1" class="prs" src="xchair.png" alt=""><i id="nms">Cadeira Ergonomica Ultra-tecnológica - X-Chair</i></a></li>
+                <li><a href="#"><img id="pr2" class="prs" src="robo.png" alt=""><i id="nms">Robô Aspirador de Pó Smart - Ultra-Clean</i></a></li>
               </ul>
           </form>
           </div>
