--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <p class="p2">Materiais e tecnologias: 	Plástico, Bateria, IA, Sensores, Couro, Lã, Ferro, Borracha, Fio de Cobre, Caixinha de som e hidráulica.</p>
             <p class="p3">IA tem sensores para auxiliar a pessoa a não bater com velocidade máxima de 5 km/h.</p>
             <p class="p4">Pode-se ativar e desativar a vibração, posicionar a cadeira do jeito que o usuário quiser e tem setinhas para rotacioná-la.</p>
+            <video class="vdi" loop autoplay muted>
+                <source src="vd.mp4" type="video/mp4">
+            </video>
     </div>
     </div>
     <div class="com">
